lib/ufw/user.rules
*filter
:ufw-user-input - [0:0]
:ufw-user-output - [0:0]
:ufw-user-forward - [0:0]
:ufw-before-logging-input - [0:0]
:ufw-before-logging-output - [0:0]
:ufw-before-logging-forward - [0:0]
:ufw-user-logging-input - [0:0]
:ufw-user-logging-output - [0:0]
:ufw-user-logging-forward - [0:0]
:ufw-after-logging-input - [0:0]
:ufw-after-logging-output - [0:0]
:ufw-after-logging-forward - [0:0]
:ufw-logging-deny - [0:0]
:ufw-logging-allow - [0:0]
:ufw-user-limit - [0:0]
:ufw-user-limit-accept - [0:0]
### RULES ###

### tuple ### allow any 22 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 22 -j ACCEPT
-A ufw-user-input -p udp --dport 22 -j ACCEPT

### tuple ### allow any 80 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 80 -j ACCEPT
-A ufw-user-input -p udp --dport 80 -j ACCEPT

### tuple ### allow any 53 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 53 -j ACCEPT
-A ufw-user-input -p udp --dport 53 -j ACCEPT

### tuple ### allow any 67 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 67 -j ACCEPT
-A ufw-user-input -p udp --dport 67 -j ACCEPT

### tuple ### allow any 68 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 68 -j ACCEPT
-A ufw-user-input -p udp --dport 68 -j ACCEPT

### tuple ### allow any any 0.0.0.0/0 any 192.168.42.0/24 in
-A ufw-user-input -s 192.168.42.0/24 -j ACCEPT

### tuple ### allow any any 0.0.0.0/0 any 192.168.42.0/24 out
-A ufw-user-output -s 192.168.42.0/24 -j ACCEPT

### END RULES ###

### LOGGING ###
-I ufw-user-logging-input -j RETURN
-I ufw-user-logging-output -j RETURN
-I ufw-user-logging-forward -j RETURN
### END LOGGING ###

### RATE LIMITING ###
-A ufw-user-limit -j REJECT
-A ufw-user-limit-accept -j ACCEPT
### END RATE LIMITING ###
COMMIT
