lib/ufw/user6.rules
*filter
:ufw6-user-input - [0:0]
:ufw6-user-output - [0:0]
:ufw6-user-forward - [0:0]
:ufw6-before-logging-input - [0:0]
:ufw6-before-logging-output - [0:0]
:ufw6-before-logging-forward - [0:0]
:ufw6-user-logging-input - [0:0]
:ufw6-user-logging-output - [0:0]
:ufw6-user-logging-forward - [0:0]
:ufw6-after-logging-input - [0:0]
:ufw6-after-logging-output - [0:0]
:ufw6-after-logging-forward - [0:0]
:ufw6-logging-deny - [0:0]
:ufw6-logging-allow - [0:0]
### RULES ###

### tuple ### allow any 22 ::/0 any ::/0 in
-A ufw6-user-input -p tcp --dport 22 -j ACCEPT
-A ufw6-user-input -p udp --dport 22 -j ACCEPT

### tuple ### allow any 80 ::/0 any ::/0 in
-A ufw6-user-input -p tcp --dport 80 -j ACCEPT
-A ufw6-user-input -p udp --dport 80 -j ACCEPT

### tuple ### allow any 53 ::/0 any ::/0 in
-A ufw6-user-input -p tcp --dport 53 -j ACCEPT
-A ufw6-user-input -p udp --dport 53 -j ACCEPT

### tuple ### allow any 67 ::/0 any ::/0 in
-A ufw6-user-input -p tcp --dport 67 -j ACCEPT
-A ufw6-user-input -p udp --dport 67 -j ACCEPT

### tuple ### allow any 68 ::/0 any ::/0 in
-A ufw6-user-input -p tcp --dport 68 -j ACCEPT
-A ufw6-user-input -p udp --dport 68 -j ACCEPT

### END RULES ###

### LOGGING ###
-I ufw6-user-logging-input -j RETURN
-I ufw6-user-logging-output -j RETURN
-I ufw6-user-logging-forward -j RETURN
### END LOGGING ###
COMMIT
